@@ -7,34 +7,29 @@ import com.library.bookstore.entity.Book;
 import com.library.bookstore.execptions.AuthorNotFoundException;
 import com.library.bookstore.execptions.BookApiException;
 import com.library.bookstore.execptions.RessourceNotFoundException;
-import com.library.bookstore.mapper.BookMapper;
+import com.library.bookstore.mapper.BookAutoMapper;
 import com.library.bookstore.repository.AuthorRepository;
 import com.library.bookstore.repository.BookRepository;
-import lombok.AllArgsConstructor;
-import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class BookService {
-    @Autowired
-    private BookRepository bookRepository;
-    @Autowired
-    private AuthorRepository authorRepository;
-    @Autowired
-    private ModelMapper modelMapper;
+
+    private final BookRepository bookRepository;
+
+    private final AuthorRepository authorRepository;
 
     // create book
-
+    @Transactional
     public BookDto createBook(Long authorId, BookDto bookDto ){
 
-        // map bookDto into Book entity
-        Book book = modelMapper.map(bookDto, Book.class);
+        Book book = BookAutoMapper.MAPPER.mapToBook(bookDto);
 
         // retrieve Author entity by id
         Author author = authorRepository.findById(authorId).orElseThrow(() ->
@@ -47,16 +42,25 @@ public class BookService {
         Book newBook = bookRepository.save(book);
 
         // return as bookDto with Mapper
-        return modelMapper.map(newBook, BookDto.class);
+        return BookAutoMapper.MAPPER.mapToBookDto(newBook);
     }
 
+    @Transactional(readOnly = true)
+    public List<BookDto> getAllBooks(){
+        List<Book> books= bookRepository.findAll();
+        return books.stream().map((book) -> BookAutoMapper.MAPPER.mapToBookDto(book)).toList();
+    }
+
+    @Transactional(readOnly = true)
     public List<BookDto> getBooksByAuthorId(Long authorId){
 
         // retrieve Book by authorId
         List<Book> books= bookRepository.findByAuthorId(authorId);
-        return books.stream().map(BookMapper::mapToBookDto).collect(Collectors.toList());
+
+        return books.stream().map(book -> BookAutoMapper.MAPPER.mapToBookDto(book)).toList();
     }
 
+    @Transactional(readOnly = true)
     public BookDto getBookById(Long authorId, Long bookId){
 
         // retrieve author entity by id
@@ -71,9 +75,10 @@ public class BookService {
         if (!book.getAuthor().getId().equals(author.getId())) {
             throw new BookApiException(HttpStatus.BAD_REQUEST, "Book does not belong to author");
         }
-        return modelMapper.map(book, BookDto.class);
+        return BookAutoMapper.MAPPER.mapToBookDto(book);
     }
 
+    @Transactional
     public BookDto updateBook(Long authorId, Long bookId, BookDto bookRequest){
 
         // retrieve author entity by id
@@ -99,9 +104,10 @@ public class BookService {
 
         Book updatedBook = bookRepository.save(book);
 
-        return modelMapper.map(updatedBook, BookDto.class);
+        return BookAutoMapper.MAPPER.mapToBookDto(updatedBook);
     }
 
+    @Transactional
     public void deleteBook(Long authorId, Long bookId){
 
         // retrieve author entity by id
